--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "dependencies": {
     "gatsby": "^4.7.1",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-sharp": "^4.10.0",
+    "gatsby-source-filesystem": "^4.10.0",
+    "gatsby-transformer-sharp": "^4.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
