--- a/.github/workflows/lcu-github-artifacts-release.yml
+++ b/.github/workflows/lcu-github-artifacts-release.yml
@@ -1,4 +1,4 @@
-name: jeremytomlinson/public-web-gatsby
+name: jeremytomlinson/gatsby-starter-blog
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   Branches: main
   MainBranch: main
   NPMRegistry: https://registry.npmjs.org/
-  InstallCommand: npm ci
+  InstallCommand: npm i
   BuildCommand: npm run build
   Output: ./public
 
